# hazel-dev

./: .gitignore  .gitmodules  README.md  alias.sh  premake5.lua  variables.sh
flappy-ship/: CMakeLists.txt  README.md
flappy-ship/assets/shaders/: texture-color.glsl
flappy-ship/include/: app.hpp  layer.hpp  level.hpp  player.hpp
flappy-ship/src/: app.cpp  layer.cpp  level.cpp  player.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
hazel-dev/: CMakeLists.txt  meta.hpp.in
hazel-dev/include/: application.hpp  entrypoint.hpp  hazel-api.hpp  hazel-pch.hpp  logger.hpp  meta.hpp  spdlog-pch.hpp  std-pch.hpp
hazel-dev/include/event/: app.hpp  event.hpp  key.hpp  mouse.hpp  window.hpp
hazel-dev/include/hazel/: application.hpp  core.hpp  entrypoint.hpp  logger.hpp  memory.hpp  window.hpp
hazel-dev/include/hazel/camera/: _fwd.hpp  orthographic.hpp  orthographic_controller.hpp
hazel-dev/include/hazel/core/: application.hpp  core.hpp  entrypoint.hpp  logger.hpp  memory.hpp  timestep.hpp  window.hpp
hazel-dev/include/hazel/event/: app.hpp  event.hpp  key.hpp  mouse.hpp  window.hpp
hazel-dev/include/hazel/input/: input.hpp  key_codes.hpp  mouse_button_codes.hpp
hazel-dev/include/hazel/layer/: _fwd.hpp  collection.hpp  imgui.hpp  layer.hpp
hazel-dev/include/hazel/platform/linux/: _fwd.hpp  input.hpp  opengl_buffer.hpp  opengl_context.hpp  opengl_library.hpp  opengl_log.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_vertex_array.hpp  window.hpp
hazel-dev/include/hazel/renderer/: _fwd.hpp  buffer.hpp  command.hpp  graphics_context.hpp  library.hpp  renderer.hpp  renderer2D.hpp  shader.hpp  texture.hpp  vertex_array.hpp
hazel-dev/include/hazel/trace/: profiler.hpp
hazel-dev/src/: application.cpp  entrypoint.cpp  logger.cpp
hazel-dev/src/camera/: orthographic.cpp  orthographic_controller.cpp
hazel-dev/src/core/: application.cpp  entrypoint.cpp  logger.cpp
hazel-dev/src/input/: input.cpp
hazel-dev/src/layer/: collection.cpp  imgui-build.cpp  imgui.cpp
hazel-dev/src/platform/linux/: input.cpp  opengl_buffer.cpp  opengl_context.cpp  opengl_library.cpp  opengl_log.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_vertex_array.cpp  window.cpp
hazel-dev/src/renderer/: buffer.cpp  command.cpp  library.cpp  renderer.cpp  renderer2D.cpp  shader.cpp  texture.cpp  vertex_array.cpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: flat-color.glsl  texture-color.glsl  texture.glsl
sandbox/include/: sandbox-2d.hpp  timer.hpp
sandbox/src/: sandbox-2d.cpp  sandbox-app.cpp
scripts/: format.sh  variables.sh
